[package]
name = "slog-serde"
version = "2.0.0-alpha1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Serde serialization adapter for slog-rs"
keywords = ["slog", "logging", "serde"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-serde"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/serde"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { git="http://github.com/slog-rs/slog", branch = "2.x.y" }
serde = "0.8"
